# thraxwin

./: Makefile.in  NEWS  README.markdown  README.thrax  configure  configure.ac
msvc10/: clean.ps1  thrax.props  thrax.sln
msvc10/compiler/: compiler.vcxproj  compiler.vcxproj.filters
msvc10/fsts-from-far/: fsts-from-far.vcxproj  fsts-from-far.vcxproj.filters
src/: Makefile.in
src/grammars/: Makefile.am  Makefile.in  example.grm
src/include/: Makefile.am  Makefile.in
src/include/thrax/: arcsort.h  cdrewrite.h  closure.h  compose.h  concat.h  connect.h  datatype.h  determinize.h  difference.h  evaluator.h  expand.h  function.h  grm-compiler.h  grm-manager.h  identifier-counter.h  invert.h  lexer.h  loadfst.h  loadfstfromfar.h  minimize.h  namespace.h  optimize.h  project.h  reverse.h  rewrite.h  rmepsilon.h  stringfile.h  stringfst.h  symboltable.h  union.h  unordered_map.h  unordered_set.h
src/include/thrax/algo/: context_dependent_rewrite.h  resource-map.h
src/include/thrax/compat/: oneof.h  utils.h
src/lib/: Makefile.am  Makefile.in  parser.cc
src/lib/ast/: collection-node.cc  fst-node.cc  function-node.cc  grammar-node.cc  identifier-node.cc  import-node.cc  return-node.cc  rule-node.cc  statement-node.cc  string-node.cc
src/lib/flags/: flags.cc
src/lib/main/: grm-compiler.cc  grm-manager.cc  lexer.cc  parser.yy
src/lib/util/: utils.cc
src/lib/walker/: evaluator-specializations.cc  identifier-counter.cc  loader.cc  namespace.cc
src/utils/: Makefile.in  thrax-mode.el  thraxgrm.vim
